# pico-pigweed

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  activate.bat  banner.txt  bootstrap.bat  bootstrap.sh  init_submodules.py  pigweed.json  submodules.py
applications/32blit_demo/: BUILD.gn  main.cc
applications/app_common/: BUILD.gn  README.md
applications/app_common/public/app_common/: common.h
applications/app_common_impl/: BUILD.gn  app_common_vars.gni  common_host_imgui.cc  common_host_null.cc  common_pico.cc
applications/badge/: BUILD.gn  README.md  heart_8x8.h  hello_my_name_is65x42.h  kudzu_isometric_text_sprite.h  kudzu_isometric_text_sprite.xcf  main.cc  name_tag.h  pw_banner46x10.h  pw_logo5x7.h
applications/snake/: BUILD.gn  game.cc  main.cc  snake.cc
applications/snake/public/snake/: game.h  snake.h
applications/terminal_display/: BUILD.gn  ansi.h  main.cc  text_buffer.cc  text_buffer.h  text_buffer_test.cc
build_overrides/: pi_pico.gni  pigweed.gni
lib/framecounter/: BUILD.gn  framecounter.cc
lib/framecounter/public/libkudzu/: framecounter.h
lib/ft6236/: BUILD.gn  device.cc
lib/ft6236/public/ft6236/: device.h
lib/icm42670p/: BUILD.gn  device.cc
lib/icm42670p/public/icm42670p/: device.h
lib/kudzu_buttons/: BUILD.gn  buttons.cc
lib/kudzu_buttons/public/kudzu_buttons/: buttons.h
lib/kudzu_buttons_imgui/: BUILD.gn  buttons.cc
lib/kudzu_buttons_imgui/public/kudzu_buttons_imgui/: buttons.h
lib/kudzu_buttons_null/: BUILD.gn  buttons.cc
lib/kudzu_buttons_null/public/kudzu_buttons_null/: buttons.h
lib/kudzu_buttons_pi4ioe5v6416/: BUILD.gn  buttons.cc
lib/kudzu_buttons_pi4ioe5v6416/public/kudzu_buttons_pi4ioe5v6416/: buttons.h
lib/kudzu_imu/: BUILD.gn
lib/kudzu_imu/public/kudzu_imu/: imu.h
lib/kudzu_imu_icm42670p/: BUILD.gn  imu.cc
lib/kudzu_imu_icm42670p/public/kudzu_imu_icm42670p/: imu.h
lib/kudzu_imu_imgui/: BUILD.gn  imu.cc
lib/kudzu_imu_imgui/public/kudzu_imu_imgui/: imu.h
lib/max17048/: BUILD.gn  device.cc
lib/max17048/public/max17048/: device.h
lib/pi4ioe5v6416/: BUILD.gn  device.cc
lib/pi4ioe5v6416/public/pi4ioe5v6416/: device.h
lib/pw_touchscreen/: BUILD.gn  buttons.cc
lib/pw_touchscreen/public/pw_touchscreen/: buttons.h  touchscreen.h
lib/pw_touchscreen_ft6236/: BUILD.gn  touchscreen.cc
lib/pw_touchscreen_ft6236/public/pw_touchscreen_ft6236/: touchscreen.h
lib/pw_touchscreen_imgui/: BUILD.gn  touchscreen.cc
lib/pw_touchscreen_imgui/public/pw_touchscreen_imgui/: touchscreen.h
lib/pw_touchscreen_null/: BUILD.gn  touchscreen.cc
lib/pw_touchscreen_null/public/pw_touchscreen_null/: touchscreen.h
lib/random/: BUILD.gn  random.cc
lib/random/public/libkudzu/: random.h
lib/rpc/: BUILD.gn  kudzu.options  kudzu.proto
lib/rpc/public/kudzu/: kudzu_service_pwpb.h
pcb/: CHANGELOG.md  fp-lib-table  kudzu-parts.kicad_sym  kudzu.kicad_pcb  kudzu.kicad_pro  kudzu.kicad_sch  misc.kicad_sch  power.kicad_sch  rp2040.kicad_sch  sym-lib-table  ux.kicad_sch
pcb/3d_parts/: PicoBlade-53261.FCStd  PicoBlade-53261.step  S2B-PH-SM4-TB.FCStd  S2B-PH-SM4-TB.step
pcb/KudzuLibrary.pretty/: CONN HEADER SMD 2POS 1.25MM.kicad_mod  FPC-Connector_1x40-1MP_P0.50mm_Horizontal.kicad_mod  GBA_AB.kicad_mod  GBA_DPad.kicad_mod  GBA_StartSelect.kicad_mod  JST_PH_S2B-PH-SM_1x02_P2.00mm_Horizontal.kicad_mod  SW_Push_1P1T_NO_CK_PTS840_GK_SMTR_LFS.kicad_mod  ferris.kicad_mod  kudzu_back_art.kicad_mod  kudzu_qr_code.kicad_mod
targets/host/: BUILD.gn  boot.cc
targets/rp2040/: BUILD.gn  boot.cc
targets/rp2040/config/: FreeRTOSConfig.h
tools/: BUILD.gn  setup.cfg
tools/kudzu_tools/: build_project.py  console.py  presubmit_checks.py
