# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

buildconfig = "//BUILDCONFIG.gn"
import("//build_overrides/pigweed.gni")

default_args = {
  # Sets the FreeRTOS source directory.
  dir_pw_third_party_freertos = "//third_party/freertos"
  PICO_SRC_DIR = "//third_party/pico-sdk"

  # Sets the 32blit source directory.
  THIRTYTWO_BLIT_SDK = "//third_party/32blit-sdk"

  pw_build_PIP_CONSTRAINTS = [
    # Pigweed upstream constraints
    "$dir_pw_env_setup/py/pw_env_setup/virtualenv_setup/constraint.list",
  ]

  pw_build_PIP_REQUIREMENTS = []

  # Default gn build virtualenv target.
  pw_build_PYTHON_BUILD_VENV = "//:kudzu_build_venv"

  # Set to true for offline pip installations:
  pw_build_PYTHON_PIP_INSTALL_OFFLINE = false

  pw_build_PYTHON_PIP_INSTALL_FIND_LINKS =
      [ "//environment/cipd/packages/python311/pip_cache" ]

  # Don't lint/test external Python deps.
  pw_build_TEST_TRANSITIVE_PYTHON_DEPS = false
}
