# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/python.gni")

pw_python_package("tools") {
  setup = [
    "pyproject.toml",
    "setup.cfg",
  ]
  sources = [
    "kudzu_tools/__init__.py",
    "kudzu_tools/build_project.py",
    "kudzu_tools/console.py",
    "kudzu_tools/presubmit_checks.py",
  ]
  python_deps = [
    "$dir_pw_build/py",
    "$dir_pw_cli/py",
    "$dir_pw_presubmit/py",
    "$dir_pw_protobuf:common_protos.python",
    "$dir_pw_rpc:protos.python",
    "$dir_pw_system/py",

    # RPC protos to include for console interaction.
    "//lib/rpc:protos.python",
  ]
  pylintrc = "$dir_pigweed/.pylintrc"
}
