# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
import("//build_overrides/pi_pico.gni")
import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")

config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("icm42670p") {
  public_configs = [ ":default_config" ]
  public_deps = [
    "$dir_pw_i2c:initiator",
    "$dir_pw_result",
    "$dir_pw_status",
  ]
  public = [ "public/icm42670p/device.h" ]
  deps = [
    "$dir_pw_digital_io",
    "$dir_pw_i2c:register_device",
    "$dir_pw_log",
    "//lib/kudzu_imu:kudzu_imu",
  ]
  sources = [ "device.cc" ]
  remove_configs = [ "$dir_pw_build:strict_warnings" ]
}
